<resources>
    <string name="app_name">TORA</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_password">Password:</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_recommendation_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_dashboard">MainActivity</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="slogan">Less Talk,\nMore Action.</string>
    <string name="prompt_create_account">Create Account</string>
    <string name="name">Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="continue_button">CONTINUE</string>
    <string name="have_an_account">I HAVE AN\nACCOUNT</string>
    <string name="or_line">OR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="my_movement">My Movements</string>
    <string name="view_task">View my\ntasks</string>
    <string name="to_movement_page">Go to movement\npage -></string>
    <string name="movement_name">MOVEMENT NAME</string>
    <string name="finish_creating_naccount">Finish Creating \nAccount</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emailButton">Email</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="movement_description" />
    <string name="article_description" />
    <string name="sign_petition">Sign Petition</string>
    <string name="petition">Petition</string>
    <string name="read_article">Read Article</string>
    <string name="article">Article</string>
    <string name="petition_description" />
    <string name="point_value" />
    <string name="tasks">Tasks</string>
    <string name="protest">Protest</string>
    <string name="feminist">Feminist</string>
    <string name="article_file" ></string>
    <string name="mark_as_going">Mark as going</string>
    <string name="unsuscribe">Unsuscribe</string>
</resources>