<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackground"
    tools:context=".SignUpActivity2">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/app_name"
        android:textColor="@color/LogoColour"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="20dp" />


    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/slogan"
        android:textColor="@color/LogoColour"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="80dp" />


    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/finish_creating_naccount"
        android:textAlignment="center"
        android:textColor="@color/colorTextHeadlines"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/username_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/username"
        android:textColor="@color/LogoColour"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="211dp" />

    <TextView
        android:id="@+id/password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/password"
        android:textColor="@color/LogoColour"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/confirm_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/confirm_password"
        android:textColor="@color/LogoColour"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="415dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="297dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="455dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="297dp"
        android:layout_height="36dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="254dp" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="153dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_bottom_buttons"
        android:fontFamily="@font/righteous"
        android:text="@string/continue_button"
        android:textColor="@color/LogoColour"
        android:textSize="24sp"
        android:onClick="continueProcess"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="551dp" />

    <Button
        android:id="@+id/buttonHaveAccount"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_bottom_buttons"
        android:fontFamily="@font/righteous"
        android:text="@string/have_an_account"
        android:textColor="@color/LogoColour"
        android:textSize="18sp"
        android:onClick="goBackToLogIn"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="652dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="299dp"
        android:layout_height="33dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="353dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:background="@color/colorTextHeadlines"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="622dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:background="@color/colorTextHeadlines"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="621dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/or_line"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="613dp" />
</androidx.constraintlayout.widget.ConstraintLayout>